--- a/单链表和顺序表.vcxproj.filters
+++ b/单链表和顺序表.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="SeqList.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SeqList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="LinkedList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
