--- a/单链表和顺序表.vcxproj
+++ b/单链表和顺序表.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="List.h" />
     <ClInclude Include="SeqList.h" />
   </ItemGroup>
   <ItemGroup>
