--- a/单链表和顺序表.vcxproj.filters
+++ b/单链表和顺序表.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="LinkedList.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SeqList.cpp">
